@@ -61,6 +61,7 @@ Changes for 3.2.7rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-11677] fixed wrong order of events in history list (miks)
 ..F....... [ZBX-11405] fixed conditions to display treeview button in triggers section (miks)
 ........S. [ZBX-12012] fixed resolving of Critical and Verbose event log levels by {ITEM.LOG.SEVERITY} macro (Sasha)
 A......... [ZBX-12093] fixed removing of applications that are created from application prototypes (Sasha)
